--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
     "@emotion/css": "11.10.5",
@@ -33,7 +34,10 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.17.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "storybook-chromatic-demo@0.0.0"
 }
