--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ jobs:
   publish_to_chromatic:
     steps:
       - checkout
-      - node/install-packages:
+      - node/install:
+          install-yarn: true
           node-version: '16.13'
-          pkg-manager: yarn
       - run:
           name: Publish to Chromatic
           command: |
