--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,14 @@
 version: 2.1
 
 orbs:
-  node: circleci/node@5.1.0
+  node: circleci/node@4.7.0
 
 jobs:
   publish_to_chromatic:
     steps:
       - checkout
-      - node/install:
-          install-yarn: true
-          node-version: '16.13'
+      - node/install-packages:
+          pkg-manager: yarn
       - run:
           name: Publish to Chromatic
           command: |
