--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   node: circleci/node@4.7.0
 
 jobs:
-  publish_to_chromatic:
+  publish:
     steps:
       - checkout
       - node/install-packages:
